--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>325 m<sup>2</sup>
+                <p>325 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -160,7 +161,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>450 m<sup>2</sup>
+                <p>450 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -194,7 +196,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>250 m<sup>2</sup>
+                <p>250 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -228,7 +231,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>480 m<sup>2</sup>
+                <p>480 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -262,7 +266,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>4230 m<sup>2</sup>
+                <p>4230 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -296,7 +301,8 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>180 m<sup>2</sup>
+                <p>180 m
+                    <sup>2</sup>
                 </p>
             </div>
             <div class="home__price">
@@ -314,7 +320,63 @@
     </section>
 
     <section class="gallery">
-        GALLERY
+
+        <figure class="gallery__item gallery__item--1">
+            <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--2">
+            <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--3">
+            <img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--4">
+            <img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--5">
+            <img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--6">
+            <img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--7">
+            <img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--8">
+            <img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--9">
+            <img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--10">
+            <img src="img/gal-10.jpeg" alt="Gallery image 10" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--11">
+            <img src="img/gal-11.jpeg" alt="Gallery image 11" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--12">
+            <img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--13">
+            <img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img">
+        </figure>
+
+        <figure class="gallery__item gallery__item--14">
+            <img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img">
+        </figure>
+
     </section>
 
     <footer class="footer">
