Footer & sidebar sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="container">
     <div class="sidebar">
-        SIDEBAR
+        <button class="nav-btn"></button>
     </div>
 
     <header class="header">
@@ -126,9 +126,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>325 m
-                    <sup>2</sup>
-                </p>
+                <p>325 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -161,9 +159,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>450 m
-                    <sup>2</sup>
-                </p>
+                <p>450 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -196,9 +192,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>250 m
-                    <sup>2</sup>
-                </p>
+                <p>250 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -231,9 +225,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>480 m
-                    <sup>2</sup>
-                </p>
+                <p>480 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -266,9 +258,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>4230 m
-                    <sup>2</sup>
-                </p>
+                <p>4230 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -301,9 +291,7 @@
                 <svg>
                     <use xlink:href="img/sprite.svg#icon-expand"></use>
                 </svg>
-                <p>180 m
-                    <sup>2</sup>
-                </p>
+                <p>180 m<sup>2</sup></p>
             </div>
             <div class="home__price">
                 <svg>
@@ -380,7 +368,17 @@
     </section>
 
     <footer class="footer">
-        FOOTER
+        <ul class="nav">
+            <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Doanload home planner</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+        </ul>
+        <p class="copyright">
+            &copy; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro quibusdam temporibus pariatur! Dolores possimus vero repellat commodi quae a, vel ipsa perferendis impedit omnis.
+        </p>
     </footer>
 </body>
 
