--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
     <div class="realtors">
         <h3 class="heading-3">Top 3 realtors</h3>
         <div class="realtors__list">
-            <img src="img/realtor-1.jpeg" alt="realtor 1 photo" class="realtors__img">
+            <img src="img/realtor-1.jpg" alt="realtor 1 photo" class="realtors__img">
             <div class="realtors__details">
                 <h4 class="heading-4 heading-4--light">Erik Feiman</h4>
                 <p class="realtors__sales">245 houses sold</p>
             </div>
 
-            <img src="img/realtor-2.jpeg" alt="realtor 2 photo" class="realtors__img">
+            <img src="img/realtor-2.jpg" alt="realtor 2 photo" class="realtors__img">
             <div class="realtors__details">
                 <h4 class="heading-4 heading-4--light">Kim Brown</h4>
                 <p class="realtors__sales">212 houses sold</p>
             </div>
 
-            <img src="img/realtor-3.jpeg" alt="realtor 3 photo" class="realtors__img">
+            <img src="img/realtor-3.jpg" alt="realtor 3 photo" class="realtors__img">
             <div class="realtors__details">
                 <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
                 <p class="realtors__sales">198 houses sold</p>
@@ -118,8 +118,8 @@
     </section>
 
     <div class="story__pictures">
-        <img src="img/story-1.jpeg" alt="Couple on new house" class="story__img--1">
-        <img src="img/story-2.jpeg" alt="New house" class="story__img--2">
+        <img src="img/story-1.jpg" alt="Couple on new house" class="story__img--1">
+        <img src="img/story-2.jpg" alt="New house" class="story__img--2">
     </div>
 
     <div class="story__content">
@@ -134,7 +134,7 @@
 
     <section class="homes">
         <div class="home">
-            <img src="img/house-1.jpeg" alt="House 1" class="home__img">
+            <img src="img/house-1.jpg" alt="House 1" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="home">
-            <img src="img/house-2.jpeg" alt="House 2" class="home__img">
+            <img src="img/house-2.jpg" alt="House 2" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -200,7 +200,7 @@
         </div>
 
         <div class="home">
-            <img src="img/house-3.jpeg" alt="House 3" class="home__img">
+            <img src="img/house-3.jpg" alt="House 3" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -233,7 +233,7 @@
         </div>
 
         <div class="home">
-            <img src="img/house-4.jpeg" alt="House 4" class="home__img">
+            <img src="img/house-4.jpg" alt="House 4" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -266,7 +266,7 @@
         </div>
 
         <div class="home">
-            <img src="img/house-5.jpeg" alt="House 5" class="home__img">
+            <img src="img/house-5.jpg" alt="House 5" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -299,7 +299,7 @@
         </div>
 
         <div class="home">
-            <img src="img/house-6.jpeg" alt="House 6" class="home__img">
+            <img src="img/house-6.jpg" alt="House 6" class="home__img">
             <svg class="home__like">
                 <use xlink:href="img/sprite.svg#icon-heart-full"></use>
             </svg>
@@ -339,59 +339,59 @@
     <section class="gallery">
 
         <figure class="gallery__item gallery__item--1">
-            <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+            <img src="img/gal-1.jpg" alt="Gallery image 1" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--2">
-            <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
+            <img src="img/gal-2.jpg" alt="Gallery image 2" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--3">
-            <img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img">
+            <img src="img/gal-3.jpg" alt="Gallery image 3" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--4">
-            <img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img">
+            <img src="img/gal-4.jpg" alt="Gallery image 4" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--5">
-            <img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img">
+            <img src="img/gal-5.jpg" alt="Gallery image 5" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--6">
-            <img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img">
+            <img src="img/gal-6.jpg" alt="Gallery image 6" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--7">
-            <img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img">
+            <img src="img/gal-7.jpg" alt="Gallery image 7" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--8">
-            <img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img">
+            <img src="img/gal-8.jpg" alt="Gallery image 8" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--9">
-            <img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img">
+            <img src="img/gal-9.jpg" alt="Gallery image 9" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--10">
-            <img src="img/gal-10.jpeg" alt="Gallery image 10" class="gallery__img">
+            <img src="img/gal-10.jpg" alt="Gallery image 10" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--11">
-            <img src="img/gal-11.jpeg" alt="Gallery image 11" class="gallery__img">
+            <img src="img/gal-11.jpg" alt="Gallery image 11" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--12">
-            <img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img">
+            <img src="img/gal-12.jpg" alt="Gallery image 12" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--13">
-            <img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img">
+            <img src="img/gal-13.jpg" alt="Gallery image 13" class="gallery__img">
         </figure>
 
         <figure class="gallery__item gallery__item--14">
-            <img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img">
+            <img src="img/gal-14.jpg" alt="Gallery image 14" class="gallery__img">
         </figure>
 
     </section>
